syntax = "proto3";

package calculator;

option java_package = "com.proto.calculator";
option java_multiple_files = true;

message SumRequest {
    int32 first_number = 1;
    int32 second_number = 2;
}

message SumResponse {
    int32 sum_result = 1;
}

message PrimeNumberDecompositionRequest {
    int64 number = 1;
}

message PrimeNumberDecompositionResponse {
    int64 prime_factor = 1;
}

message SquareRootRequest {
    int32 number = 1;
}

message SquareRootResponse {
    double rooted_number = 1;
}

service CalculatorService {
    rpc sum (SumRequest) returns (SumResponse) {};

    rpc primeNumberDecomposition (PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};

    // error handling
    // this rpc will throw an exception if the sent data is negative
    rpc SquareRoot (SquareRootRequest) returns (SquareRootResponse) {};
}